Add CSS styles for task display

--- a/affichage-taches.html
+++ b/affichage-taches.html
@@ -10,6 +10,15 @@
         <li>Sample Task 1</li>
         <li>Sample Task 2</li>
       </ul>
+      <style>
+        ul#taskList {
+          list-style-type: none;
+        }
+        ul#taskList li {
+          padding: 10px;
+          border-bottom: 1px solid #ddd;
+        }
+      </style>
       
 </body>
 </html>
